[Update 2018-06-29]
- Added debugMode that removes class restrictions for all items [Slap]
	Value can be edited in line 1 of head.js

		***MAKE SURE IT'S SET TO 0 BEFORE PUSHING***

- Shield slot now resets and hides when two-handed weapon types are chosen [Slap]
- Removed items [Slap]:
	Her National Treasury
	Fanta Orange Can
	Fanta Grape Can
	Coca-Cola Can
	Flower Tea Cap
	Coca-Cola Cap
	Bread Bag
	Pumpkin Hat2007
	Reindeer Nose
	Santa's Beard
- Added items [Slap]:
	Buwaya Skin Clothes
	Kalasag
	Nightmare Bangungot Boots
	Bakonawa Scale Armor
	Port Malaya set
	Witch Hat
	Green Sheila Hairnet
	Orange Sheila Hairnet
	Blue Sheila Hairnet
	Pink Sheila Hairnet
- Issue #149: Proofreading [Slap]
	Naga Scale Armor
	Refined Tights
	Naga Scale Shield
	Mushika
	Sprint Shoes
	Angelic Ring
	Sprint Ring
	Pinguicura's Corsage
	Cursed Star
	Cursed Star set
	Antenna
	Giant Shield
	Paper Bag Hat
	Bayani Kalasag
	Happy Wig
	Umbrella Hat
	Glarice Doll Hat
	Vinit Doll Hat
	Pagdayaw [0]
	Wings of Victory
	Dokebi's Wig

[Update 2018-06-28]
- Wrote function to sort cards automatically [Slap]
	Outputs an array in the same format as CardSortOBJ used previously, so no need to change anything that calls the array
- Used script to automatically fill array cardID based on game files [Slap]
	Incomplete since not all names match perfectly
- Added linking to item database based on array cardID [Slap]

[Update 2018-06-27]
- Completed ItemID links for every single gear (not cards) currently in calc [Slap]
- Removed some left over stuff in foot.js for removed items [Slap]
- Removed items [Slap]:
	+1 DEF
	Blue Poring Clip
	Green Poring Clip
	Pink Poring Clip
	Yellow Poring Clip //consolidated under Poring Clip (Colored)
	Cute Red Ribbon
	Cute Blue Ribbon
	Cute White Ribbon
	Cute Green Ribbon //consolidated under Ribbon (Colored)
	Death Loop
	Rune Spellstone
	Asprika
- Added items [Slap]:
	Phoenix Crown [0]
	Satanic Ring [Rental]
	Satanic Bone Helm
	Poring Clip (Colored)
	Phreeoni Hat
	Zaha Doll Hat